...
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="Crear Album" />



    <EditText
        android:id="@+id/albumName_text_input"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="Nombre"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_fondo_btn"
...
        android:inputType="text"
        android:paddingHorizontal="16dp"/>



    <EditText
        android:id="@+id/albumCover_text_input"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="URL de la Portada"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_fondo_btn"
...
        android:inputType="text"
        android:paddingHorizontal="16dp"/>



    <EditText
        android:id="@+id/idEdtDate"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:hint="Fecha"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_fondo_btn"
...
        android:focusableInTouchMode="false"
        android:paddingHorizontal="16dp"/>



    <EditText
        android:id="@+id/albumDescripcion_text_input"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:textSize="15dp"
        android:textColorHint="#000000"
        android:hint="Descripción"
        android:layout_marginTop="10dp"
...
