...
            android:layout_centerHorizontal="true"
            android:layout_height="63dp"
            android:scaleType="fitXY"
            android:src="@drawable/album_nuevo"
            android:contentDescription='Enlace para Crear Album'></ImageButton>
        <Button
            android:id="@+id/btnCreateAlbum"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="Crear Album"
            android:textSize="8dp"
            android:layout_marginTop="35dp"
...
            android:contentDescription='Redirije a Crear Album'></Button>




        <ImageButton
            android:id="@+id/btnImgCreateTrack"
            android:layout_width="99dp"

            android:layout_height="63dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="263dp"
            android:src="@drawable/album_nuevo"
...
