<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Inicio"></item>

    <item
        android:id="@+id/albumes"
        android:icon="@drawable/ic_baseline_album_24"
        android:title="Albumes"></item>

    <item
        android:id="@+id/artistas"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="Artista"></item>

    <item
        android:id="@+id/coleccionista"
        android:icon="@drawable/ic_baseline_library_music_24"
        android:title="Coleccionistas"></item>
</menu>